<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/repository_item_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/AppHeader"
            tools:text="Retrofit"
            android:textAlignment="center"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/repository_item_description_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/repository_item_name_tv"
            app:layout_constraintBottom_toTopOf="@+id/view_details_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLines="2"
            tools:text="Bacon ipsum dolor amet aliquip adipisicing nulla capicola, tenderloin beef ribs pancetta doner tri-tip ipsum. Nulla kielbasa fatback incididunt laborum pastrami. Prosciutto esse swine cupim, shankle doner veniam aliqua tenderloin chicken. Anim capicola chuck, sausage flank sunt strip steak voluptate cupidatat jerky t-bone. Aliquip short loin andouille, incididunt pig cupidatat chicken brisket proident irure laborum ham hock." />

        <ImageView
            android:id="@+id/repository_item_star_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/stars_gray"
            android:contentDescription="@string/a_punch_hole_star_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/view_details_button"
            app:layout_constraintTop_toTopOf="@+id/view_details_button"/>

        <TextView
            android:id="@+id/repository_item_stars_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            tools:text="55"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/repository_item_star_iv"
            app:layout_constraintBottom_toBottomOf="@id/repository_item_star_iv"
            app:layout_constraintLeft_toRightOf="@id/repository_item_star_iv"/>

        <ImageView
            android:id="@+id/repository_item_watchers_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/watchers_gray"
            android:contentDescription="@string/a_eye_icon"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toRightOf="@id/repository_item_stars_tv"
            app:layout_constraintBottom_toBottomOf="@+id/view_details_button"
            app:layout_constraintTop_toTopOf="@+id/view_details_button"/>

        <TextView
            android:id="@+id/repository_item_watchers_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            tools:text="1000"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/repository_item_watchers_iv"
            app:layout_constraintBottom_toBottomOf="@id/repository_item_watchers_iv"
            app:layout_constraintLeft_toRightOf="@id/repository_item_watchers_iv"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/view_details_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>